...
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

        <android.support.v7.widget.Toolbar
                android:id="@+id/bottom_sheet_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/primary"
                android:elevation="0dp"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
...
                        tools:text="Thu, 7 Dec 2017"/>
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
                android:id="@+id/bottom_sheet_bubblelist"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bottomsheet_bubblelist_height"
                android:layout_below="@id/bottom_sheet_toolbar"
                android:orientation="horizontal"
                android:scrollbars="horizontal"
                tools:layout_editor_absoluteX="16dp"
...
                        android:paddingEnd="8dp"
                        android:text="@string/map_frag_bottomsheet_inp_dialog_dc_location_hint"
                        android:textSize="16sp"
                        tools:ignore="RtlSymmetry"/>

                <EditText
                        android:id="@+id/bottom_sheet_input_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:focusable="false"
                        android:inputType="textVisiblePassword"
                        android:maxLines="1"
...
